--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <div class="col-lg-4">
                 <div class="list-group">
-                    <a href="#" class="list-group-item active">coming soon</a>
+                    <a href="6648f35e6b8bd8ddfe33cc00 d2498a5091b4487c8931afc68ed91b3b.html" class="list-group-item active">6648f35e6b8bd8ddfe33cc00</a>
                     <a href="#" class="list-group-item">coming soon</a>
                     <a href="#" class="list-group-item">coming soon</a>
                 </div>
