--- a/profile.html
+++ b/profile.html
@@ -46,12 +46,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">whoami</a>
+                <a class="navbar-brand" href="index.html">whoami</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">button_not_working<span class="caret"></span> </a>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">button_not_working<span class="caret"></span> </a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="">Ooh a link</a></li>
                             <li><a href="#">Two links?! Oh boy</a></li>
