--- a/profile.html
+++ b/profile.html
@@ -53,13 +53,13 @@
                     <li class="dropdown">
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">button_not_working<span class="caret"></span> </a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="">Ooh a link</a></li>
-                            <li><a href="#">Two links?! Oh boy</a></li>
-                            <li><a href="#">Now you're being ridiculous</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Ooh a link</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Two links?! Oh boy</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Now you're being ridiculous</a></li>
                             <li class="divider"></li>
                             <li class="dropdown-header">Much Wow</li>
-                            <li><a href="#">So link</a></li>
-                            <li><a href="#">Many internet</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">So link</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Many internet</a></li>
                         </ul>
                     </li>
                     
