--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h1>Whoami</h1>
                 <hr>
                 <p>Hello, I am Anurag Chevendra.</p>
-                <p>I'm a Offensive security professional with focus in system internals and administration. Currently I'm working at Pelorus as a Windows Reverse Engineer. I've experience in both IT as well as OT security domain's. You can check out my work over <a href="#">here</a>.</a></p>
+                <p>I'm a Offensive security professional with focus in system internals and administration. Currently I'm working at Pelorus as a Windows Reverse Engineer. I've experience in both IT as well as OT security domain's. You can check out my work over <a href="profile.html">here</a>.</a></p>
                 <p>TimeLine:</p>
                 <div class="timeline">
                     <div class="timeline-item">
