--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                     <br>
                     <a href="https://www.linkedin.com/in/anurag-chevendra/">Linkedin</a>
                     <br>
-                    <a>anuragmchevendra@gmail.com</a>
+                    <a href="https://github.com/Anurag-Chevendra">Github</a>
                     <br>
-                    <a href="https://github.com/Anurag-Chevendras">Github</a>
+                    <a>anuragmchevendra@gmail.com</a>
                 </p>
             </div>
         </div>
