--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       <div class="timeline-content">
                         <div class="timeline-date">2019</div>
                         <div class="timeline-description">ISC, Hiranandani Foundation School, Thane</div>
-                        <div class="timeline-description">B.Tech in Electrical Engineering, V.J.T.I, &nbsp; Mumbai</div>
+                        <div class="timeline-description">B.Tech in Electrical Engineering, V.J.T.I, Mumbai</div>
                       </div>
                     </div>
                     <div class="timeline-item">
@@ -98,28 +98,28 @@
                         <div class="timeline-date">2021</div>
                         <div class="timeline-description">IEEE VJTI - Intern</div>
                         <div class="timeline-description">Angel Xpress Foundation - Math Teacher</div>
-                        <div class="timeline-description">Center of Excellence in Complex and Non-Lin ear Dynamical Systems, V.J.T.I - Security Intern</div>
+                        <div class="timeline-description">Center of Excellence in Complex and Non-Linear Dynamical Systems, V.J.T.I - Security Intern</div>
                       </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-content">
                           <div class="timeline-date">2022</div>
-                          <div class="timeline-description">Eaton India Innovation Center, Pune - Secur ity Intern</div>
-                          <div class="timeline-description">Center of Excellence in Complex and Non-Lin ear Dynamical Systems, V.J.T.I - Security Intern</div>
+                          <div class="timeline-description">Eaton India Innovation Center, Pune - Security Intern</div>
+                          <div class="timeline-description">Center of Excellence in Complex and Non-Linear Dynamical Systems, V.J.T.I - Security Intern</div>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-content">
                           <div class="timeline-date">2023</div>
-                          <div class="timeline-description">Pelorus Technoligies, Mumbai - Windows Reve rse Engineer</div>
-                          <div class="timeline-description">Center of Excellence in Complex and Non-Lin ear Dynamical Systems, V.J.T.I - Security Intern</div>
+                          <div class="timeline-description">Pelorus Technoligies, Mumbai - Windows Reverse Engineer</div>
+                          <div class="timeline-description">Center of Excellence in Complex and Non-Linear Dynamical Systems, V.J.T.I - Security Intern</div>
                         </div>
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-content">
                           <div class="timeline-date">2024</div>
-                          <div class="timeline-description">Pelorus Technoligies, Mumbai - Windows Reve rse Engineer</div>
-                          <div class="timeline-description">Center of Excellence in Complex and Non-Lin ear Dynamical Systems, V.J.T.I - Security Intern</div>
+                          <div class="timeline-description">Pelorus Technoligies, Mumbai - Windows Reverse Engineer</div>
+                          <div class="timeline-description">Center of Excellence in Complex and Non-Linear Dynamical Systems, V.J.T.I - Security Intern</div>
                         </div>
                     </div>
                   <!-- Add more events if needed -->
