--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                 </button>
                 <a class="navbar-brand" href="profile.html">Profile</a>
             </div>
+<!-- 
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">button_not_working<span class="caret"></span> </a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Navigate<span class="caret"></span> </a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="">Ooh a link</a></li>
                             <li><a href="#">Two links?! Oh boy</a></li>
@@ -66,6 +67,7 @@
                     
                 </ul>
             </div>
+-->
         </div>
     </nav>
 
@@ -78,6 +80,7 @@
                 <hr>
                 <p>Hello, I am Anurag Chevendra.</p>
                 <p>I'm an Offensive security professional with focus in system internals and administration. Currently I'm working at Pelorus as a Windows Reverse Engineer. I've experience in both IT as well as OT security domain's. You can check out my work over <a href="profile.html">here</a>.</a></p>
+                <p>I have lead </p>
                 <p>TimeLine:</p>
                 <div class="timeline">
                     <div class="timeline-item">
@@ -110,11 +113,12 @@
                     </div>
                     <div class="timeline-item">
                         <div class="timeline-content">
-                          <div class="timeline-date">2023</div>
+                          <div class="timeline-date">2023 - Till date</div>
                           <div class="timeline-description">Pelorus Technologies, Mumbai - Windows Reverse Engineer</div>
                           <div class="timeline-description">Center of Excellence in Complex and Non-Linear Dynamical Systems, V.J.T.I - Security Intern</div>
                         </div>
                     </div>
+                    <!--
                     <div class="timeline-item">
                         <div class="timeline-content">
                           <div class="timeline-date">2024</div>
@@ -122,6 +126,7 @@
                           <div class="timeline-description">Center of Excellence in Complex and Non-Linear Dynamical Systems, V.J.T.I - Security Intern</div>
                         </div>
                     </div>
+                -->
                   <!-- Add more events if needed -->
                 </div>
                 
