--- a/profile.html
+++ b/profile.html
@@ -32,7 +32,16 @@
     .hov:hover {opacity:3;background: #000;}
     </style>
 </head>
+<!-- for analystics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HVTDRLNYP9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-HVTDRLNYP9');
+</script>
 <body>
 
     
