--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                       <div class="timeline-content">
                         <div class="timeline-date">2019</div>
                         <div class="timeline-description">ISC, Hiranandani Foundation School, Thane</div>
-                        <div class="timeline-description">B.Tech in Electrical Engineering, V.J.T.I, Mumbai</div>
+                        <div class="timeline-description">B.Tech in Electrical Engineering, V.J.T.I, Mumbai (started)</div>
                       </div>
                     </div>
                     <div class="timeline-item">
@@ -124,6 +124,7 @@
                         <div class="timeline-content">
                           <div class="timeline-date">2023 - Till date</div>
                           <div class="timeline-description">Pelorus Technologies, Mumbai - Windows Reverse Engineer</div>
+                            <div class="timeline-description">B.Tech in Electrical Engineering, V.J.T.I, Mumbai (completed)</div>
                           <div class="timeline-description">Center of Excellence in Complex and Non-Linear Dynamical Systems, V.J.T.I - Security Intern</div>
                         </div>
                     </div>
