--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h1>Whoami</h1>
                 <hr>
                 <p>Hello, I am Anurag Chevendra.</p>
-                <p>I'm an Offensive security professional with focus in system internals and administration. Currently I'm working at Pelorus as a Windows Reverse Engineer. I've experience in both IT as well as OT security domain's. You can check out my work over <a href="profile.html"><u>here</u></a>.</a></p>
+                <p>I'm an Offensive security professional with focus in system internals and administration. Currently I'm working at Pelorus as a Windows Reverse Engineer. I've experience in both IT as well as OT security domain's. <a href= "profile.html"><u>You can check out my work over here</u></a></p>
                 
                 <p>TimeLine:</p>
                 <div class="timeline">
