Update index.html - stupid shit, you can ignore

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                     <div class="timeline-item">
                       <div class="timeline-content">
                         <div class="timeline-date">2017</div>
-                        <div class="timeline-description">ICSE, Hiranandani Foundation School, Thane</div>
+                        <div class="timeline-description">ICSE, Hiranandani Foundation School, Thane (completed)</div>
                       </div>
                     </div>
                     <div class="timeline-item">
                       <div class="timeline-content">
                         <div class="timeline-date">2019</div>
-                        <div class="timeline-description">ISC, Hiranandani Foundation School, Thane</div>
+                        <div class="timeline-description">ISC, Hiranandani Foundation School, Thane (completed)</div>
                         <div class="timeline-description">B.Tech in Electrical Engineering, V.J.T.I, Mumbai (started)</div>
                       </div>
                     </div>
