--- a/index.html
+++ b/index.html
@@ -58,25 +58,23 @@
                 </button>
                 <a class="navbar-brand" href="profile.html">Profile</a>
             </div>
-<!-- 
+<!-- START NAVIGATION -->
+ 
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Navigate<span class="caret"></span> </a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="">Ooh a link</a></li>
-                            <li><a href="#">Two links?! Oh boy</a></li>
-                            <li><a href="#">Now you're being ridiculous</a></li>
-                            <li class="divider"></li>
-                            <li class="dropdown-header">Much Wow</li>
-                            <li><a href="#">So link</a></li>
-                            <li><a href="#">Many internet</a></li>
+                            <li><a href="profile.html">Profile</a></li>
+                            <li><a href="https://anurag-chevendra.github.io/movie_db/">movie_db</a></li>
+   
                         </ul>
                     </li>
                     
                 </ul>
             </div>
--->
+
+ <!-- END NAVIGATION -->
         </div>
     </nav>
 
