--- a/profile.html
+++ b/profile.html
@@ -167,7 +167,10 @@
                 <h4 class="list-group-item-heading">CRTP_PREP_&_EXAM_REVIEW</h4>
                 <p class="list-group-item-text">-Anurag Chevendra</p>
             </a>
-            
+            <a href="cve-2021-26690/index.html" class="list-group-item">
+                <h4 class="list-group-item-heading">[N-Day Writeup] CVE-2021-26690</h4>
+                <p class="list-group-item-text">-Anurag Chevendra</p>
+            </a>
         </div>
     </div>
 
