--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,13 @@
     <link href="css/hacker.css" rel="stylesheet">
 
     <style>
+    .date-right {
+    float: right;
+    font-weight: normal;
+    font-size: 0.9em;
+    color: #888;
+}
+
     .tall-row {
         margin-top: 40px;
     }
@@ -84,7 +91,7 @@
 
         <div class="row tall-row">
             <div class="col-lg-12">
-                <h1>$3CURIty pRof!13</h1>
+                <h1>$3CURIty pRof!13<span class="date-right">[dd-mm-yyyy]</span></h1>
                 <hr>
             </div>
         </div>
@@ -111,17 +118,17 @@
                     </a>
                     <a href = "https://api.accredible.com/v1/auth/invite?code=a2b54e061d3ea0d78719&credential_id=7872da6b-78c6-41b5-adcb-f761b8c905fb&url=https%3A%2F%2Fwww.credential.net%2F7872da6b-78c6-41b5-adcb-f761b8c905fb&ident=663540f4-bbe3-4089-bfb5-857287809b7e" class="list-group-item">
                         
-                        <h4 class="list-group-item-heading">Certified Red Team Professional (CRTP)</h4>
+                        <h4 class="list-group-item-heading">Certified Red Team Professional (CRTP)<span class="date-right">25-10-2024</span></h4>
                         <p class="list-group-item-text">Altered Security </p>
                     </a>
                     <a href="https://www.cert-in.org.in/s2cMainServlet?pageid=PUBVLNOTES01&VLCODE=CIVN-2022-0068" class="list-group-item">
-                        <h4 class="list-group-item-heading">CVE-2022-0162 [TP-Link TL- WR841N]</h4>
+                        <h4 class="list-group-item-heading">CVE-2022-0162 [TP-Link TL- WR841N]<span class="date-right">07-02-2022</span></h4>
                         <p class="list-group-item-text">CERT-IN</p>
                     </a>
                     <a href="https://www.cisa.gov/news-events/ics-advisories/icsa-22-354-05" class="list-group-item">
-                        <h4 class="list-group-item-heading">CVE-2022-4616 [Delta 4G Router DX-3021]</h4>
+                        <h4 class="list-group-item-heading">CVE-2022-4616 [Delta 4G Router DX-3021]<span class="date-right">20-12-2022</span></h4>
                         <p class="list-group-item-text">CISA | CERT-US</p>
-                    </a>  
+                    </a>
                 </div>
             </div>
 
@@ -129,16 +136,16 @@
 
             <div class="col-lg-6">
                 <div class="list-group">
-                    <a href="https://www.cisa.gov/uscert/ics/advisories/icsa-21-357-01" class="list-group-item">
-                        <h4 class="list-group-item-heading">CVE 2021-4161 [Moxa MGate Protocol Gateways]</h4>
+                    <a href="https://www.cisa.gov/news-events/ics-advisories/icsa-21-357-01" class="list-group-item">
+                        <h4 class="list-group-item-heading">CVE 2021-4161 [Moxa MGate Protocol Gateways]<span class="date-right">23-12-2021</span></h4>
                         <p class="list-group-item-text">CISA | CERT-US [CVSS 9.8]</p>
                     </a>
                     <a href="https://www.cisa.gov/news-events/ics-advisories/icsa-24-291-04" class="list-group-item">
-                        <h4 class="list-group-item-heading">CVE-2024-7755 [EWON FLEXY 202]</h4>
+                        <h4 class="list-group-item-heading">CVE-2024-7755 [EWON FLEXY 202]<span class="date-right">17-10-2024</span></h4>
                         <p class="list-group-item-text">CISA | CERT-US</p>
                     </a>
                     <a href="https://supportannouncement.us.dlink.com/announcement/publication.aspx?name=SAP10280" class="list-group-item">
-                        <h4 class="list-group-item-heading">13 Vulnerabilities Published in Dlink 2750-U</h4>
+                        <h4 class="list-group-item-heading">13 Vulnerabilities Published in Dlink 2750-U<span class="date-right">25-01-2022</span></h4>
                         <p class="list-group-item-text">DLink</p>
                     </a>
                     
