--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p>Hello, I am Anurag Chevendra.</p>
                 <p>I'm an Offensive security professional with focus in system internals and administration. Currently I'm working at Pelorus as a Windows Reverse Engineer. I've experience in both IT as well as OT security domain's. <a href= "profile.html"><u>You can check out my work over here</u></a></p>
                 
-                <p>TimeLine:</p>
+                <p><u>TimeLine:</u></p>
                 <div class="timeline">
                     <div class="timeline-item">
                       <div class="timeline-content">
